# Bor

./: DEPLOY.md  Dockerfile  README.md  config.py  health_server.py  logger.py  main.py  otp_extractor.py  pyproject.toml  render.yaml  replit.md  requirements.txt  run.py  start.sh  telegram_bot.py  test_chrome.py  test_render.py  web_monitor.py
