[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "chromedriver-autoinstaller>=0.6.4",
    "python-telegram-bot==20.7",
    "selenium>=4.34.2",
    "telegram>=0.0.1",
    "trafilatura>=2.0.0",
    "webdriver-manager>=4.0.2",
]
